# wg_hardware_test

./: CMakeLists.txt  rosdep.yaml  stack.xml
camera_focus/: manifest.xml
camera_focus/scripts/: prosilica_focus_dialog.py
ectools/: CMakeLists.txt
ectools/src/: .gitignore  ecstats.cpp
ethercat_monitor/: manifest.xml
life_test/: CMakeLists.txt  manifest.xml  pr2_etherCAT.launch  pr2_etherCAT_xover.launch  test_manager.py  tests.xml  wg_test_rooms.xml  wge100.launch
life_test/caster_test/: caster_controllers.yaml  caster_listeners.yaml  caster_no_air_listeners.yaml  test_full_drive.launch  test_gui_xover.launch  test_no_air.launch  test_no_air_xover.launch  test_steer.launch
life_test/force_torque_test/: test_gui.launch
life_test/gripper_test/: test_gui.launch
life_test/head_test/: pr2_head_position_controller.yaml
life_test/laser_tilt_test_2/: laser_tilt_2.urdf  laser_tilt_listeners_no_laser.yaml  pr2_calibration_controllers.yaml  pr2_laser_tilt_controller_2.yaml  test_gui.launch
life_test/lc_gripper_test/: joint_position_controller.yaml  lc_gripper_listeners.yaml  old_test_gui.launch  test_gui.launch  vel_test_gui.launch
life_test/pr2_test/: pr2_arm_controllers.launch  pr2_listeners.yaml
life_test/scripts/: both_arm_cmder.py  caster_cmder.py  caster_steer_cmder.py  collision_free_arm_cmder.py  collision_free_left_arm_cmder.py  disable_xover.sh  gripper_cmder.py  laser_traj_cmd.py  laser_traj_cmd_2.py  lc_gripper_cmder.py  periodic_drive.py  pr2_etherCAT_xover.sh  pr2_test_logger.py  shoulder_cmder.py  upperarm_cmder.py  wrist_cmder.py
life_test/shoulder_ua_test/: left_arm_config.launch  left_arm_controller.launch  pr2_shoulder_ua_controller.yaml  right_arm_config.launch  right_arm_controller.launch
life_test/simple_test/: fake_test.py
life_test/slip_ring_test/: slip_ring_assembled_listeners.yaml  test_assembled.launch  test_gui.launch
life_test/torso_test/: test_gui.launch
life_test/unit_test/: check_config_files.py
life_test/wrist_test/: test_gui.launch
life_test/xrc/: gui.fbp  gui.xrc
mtrace_tools/: .gitignore  CMakeLists.txt  controller_plugins.xml  load_calibrate.launch  load_trigger.launch  mainpage.dox  manifest.xml  resistance_recorder.launch  sine.launch  square.launch  square_velocity.launch
mtrace_tools/msg/: MotorResistance.msg  MotorResistanceSample.msg
mtrace_tools/scripts/: .gitignore  annotate_diag.py  delay_queue.py  diag_error.py  mtrace_plot.py  mtrace_recorder.py  old_mtrace_plot.py  resistance_plot.py
mtrace_tools/src/: calibrate_controller.cpp  digital_trigger_controller.cpp  motor_resistance_recorder.cpp  sine_controller.cpp  square_controller.cpp  square_velocity_controller.cpp
mtrace_tools/xrc/: mtrace_panel.fbp  mtrace_panel.xrc
pr2_camera_focus/: CMakeLists.txt  wge100_camera_focus.launch
pr2_camera_focus/scripts/: focus_prosilica.py
pr2_component_descriptions/: manifest.xml
pr2_component_descriptions/robot_motors/: caster_motor.urdf.xacro  elbow_flex_motor.urdf.xacro  forearm_roll_motor.urdf.xacro  gripper_motor.urdf.xacro  head_pan_motor.urdf.xacro  head_tilt_motor.urdf.xacro  laser_tilt_motor.urdf.xacro  shoulder_lift_motor.urdf.xacro
pr2_component_descriptions/robots/: empty_robot.urdf  gripper.urdf.xacro  pr2_arm.urdf.xacro  pr2_left_arm.urdf.xacro
pr2_component_descriptions/test/: test_urdf.cpp
pr2_drive_life_test/: CMakeLists.txt  life_test_map.pgm  manifest.xml  pr2_drive_life_test.launch
pr2_drive_life_test/scripts/: pr2_drive_life_test.py
pr2_drive_life_test/src/: pr2_drive_life_test.cpp
pr2_hardware_test_monitor/: CMakeLists.txt  mainpage.dox  manifest.xml
pr2_hardware_test_monitor/scripts/: pr2_hw_test_monitor
pr2_hardware_test_monitor/src/pr2_hardware_test_monitor/: camera_listener.py  diag_agg_listener.py  drive_listener.py  ecstats_listener.py  ethercat_listener.py  hokuyo_listener.py  pr2_hardware_simulator.py  pr2_hw_listener.py  pr2_hw_monitor.py  trans_listener.py
pr2_hardware_test_monitor/test/: camera_many_warn_test.py  camera_stale_test.py  camera_warn_test.py  dropped_packet_test.py  encoder_error_test.py  late_packet_test.py  monitor_latch_test.py  no_heartbeat_test.py  single_dropped_packet_test.py  trans_error_test.py
pr2_hardware_test_monitor/test/config/: camera_listener.yaml  ua_trans_listener.yaml
pr2_hardware_test_monitor/test/launch/: cam_many_warn_test.launch  cam_stale_test.launch  cam_warn_test.launch  dropped_packet_test.launch  encoder_errors_test.launch  late_packet_test.launch  single_dropped_packet_test.launch  trans_error_flex.launch  trans_error_roll.launch
pr2_hw_test_utilities/: mainpage.dox  manifest.xml
pr2_hw_test_utilities/desktop_apps/: restart_iface.py
pr2_hw_test_utilities/machine_scripts/: kkill
pr2_transmission_check/: CMakeLists.txt  mainpage.dox  manifest.xml
pr2_transmission_check/include/pr2_transmission_check/: pr2_transmission_check_node.h  transmission_check.h
pr2_transmission_check/src/: pr2_transmission_check_node.cpp  transmission_check.cpp
pr2_transmission_check/test/: trans_error_test.py
pr2_transmission_check/test/launch/: trans_error_test.launch  wrist_trans_error.launch
qualification/: CMakeLists.txt  manifest.xml  qualify.py  wg_map.xml
qualification/config/: bl_caster_conf.launch  br_caster_conf.launch  configs.xml  fl_caster_conf.launch  fr_caster_conf.launch  head_conf.launch  l_full_arm_conf.launch  l_gripper_conf.launch  l_shoulder_conf.launch  l_shoulder_ua_conf.launch  l_upperarm_conf.launch  l_wrist_conf.launch  laser_tilt_conf.launch  laser_tilt_motor_only_conf.launch  led_projector_conf.launch  (+12 more)
wg_hardware_test-0.1.0/: rosdep.yaml
wg_hw_test_utilities/: mainpage.dox  manifest.xml
wg_invent_client/: mainpage.dox  manifest.xml
wgtest_status_indicator/: CMakeLists.txt  mainpage.dox  manifest.xml
wgtest_status_indicator/include/wgtest_status_indicator/: delcom_usb_light.h
wgtest_status_indicator/src/libdelcom_usb_light/: delcom_usb_light.cpp
wgtest_status_indicator/src/nodes/: wgtest_status_indicator.cpp
wgtest_status_indicator/src/utilities/: delcom_util.cpp
(+384 files in other folders)
